some more feature engineering

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@ __pycache__/
 data/*
 !data/csv/
 !data/csv/d_lab_400.csv
-!data/csv/d_all_synth.csv
+# !data/csv/d_all_synth.csv
+!data/csv/d_all_synthetic_training.csv
 data/csv/*.csv 
 *.png
 *.jpg
