synced the updated data

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ data/*
 !data/csv/d_lab_400.csv
 # !data/csv/d_all_synth.csv
 !data/csv/d_all_synthetic_training.csv
+!data/csv/d_synthetic.csv
 data/csv/*.csv 
 *.png
 *.jpg
